infrastructure/apps/oracle-mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-mysql
  namespace: default
  labels:
    app: oracle-mysql
    service: oracle-mysql
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
