infrastructure/apps/oracle-mysql/routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-route-1
  namespace: default
spec:
  parentRefs:
    - name: constellation-gateway
      sectionName: tls-mysql
  rules:
    - backendRefs:
      - name: oracle-mysql
        port: 3306
