infrastructure/apps/oracle-mysql/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql-tcp-1
  namespace: default
spec:
  parentRefs:
  - name: constellation-gateway
    sectionName: mysql-debug
  rules:
  - backendRefs:
    - name: oracle-mysql
      port: 3306
